2013-12-31  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: bug fix: Reading from an MPLS playlist file is now
        done as if the second and following files referenced in that
        playlist had been appended to the first file from that
        playlist. Before they were treated as if they were additional
        parts. Fixes #934.

        * mmg: enhancement: a couple of fixes to tooltips: 1. Content
        correction for »splitting by chapters«; 2. no ugly re-formatting
        with wxWidgets 3.0.0 on Windows.

2013-12-30  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: bug fix: Improved the AAC, AC3 and MP3 header decoding
        error handling so that the corresponding parsing routines won't
        get stuck in endless loops when encountering certain garbage data
        patterns.

2013-12-29  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: enhancement: unified codec names output by mkvmerge's
        identification mode for all file format readers.

        * mkvinfo: bug fix: when setting the language with --ui-language
        a few strings were still translated using the system's default
        language.

        * mkvextract: bug fix: if the track headers were located at the
        end of the file (e.g. after modification with mkvpropedit or mmg's
        header editor) then mkvextract was writing files with a length 0
        bytes.

        * mmg: bug fix: the »playlist items« list box in the »select
        playlist file to add« dialog was showing the items in reversed
        order. Fixes #952.

2013-12-28  Moritz Bunkus  <moritz@bunkus.org>

        * mmg: bug fix: the »select playlist file to add« dialog can now
        be resized, minimized and maximized. It also remembers its
        position and size during runs. Fixes #951.

2013-12-27  Moritz Bunkus  <moritz@bunkus.org>

        * mmg: enhancement: The user can select the default subtitle
        character set to use for newly added subtitle tracks in the